--- a/functions/_nextcloud_l10n.getDayNamesShort.html
+++ b/functions/_nextcloud_l10n.getDayNamesShort.html
@@ -25,7 +25,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></h4>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/nextcloud/nextcloud-l10n/blob/96e94b1/lib/date.ts#L46">date.ts:46</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/nextcloud/nextcloud-l10n/blob/965b02a/lib/date.ts#L46">date.ts:46</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -58,6 +58,7 @@
 <li><a href="_nextcloud_l10n.getMonthNames.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Month<wbr/>Names</span></a></li>
 <li><a href="_nextcloud_l10n.getMonthNamesShort.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Month<wbr/>Names<wbr/>Short</span></a></li>
 <li><a href="_nextcloud_l10n.getPlural.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Plural</span></a></li>
+<li><a href="_nextcloud_l10n.isRTL.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>isRTL</span></a></li>
 <li><a href="_nextcloud_l10n.loadTranslations.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>load<wbr/>Translations</span></a></li>
 <li><a href="_nextcloud_l10n.register.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>register</span></a></li>
 <li><a href="_nextcloud_l10n.translate.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>translate</span></a></li>
