--- a/functions/_nextcloud_l10n.getCanonicalLocale.html
+++ b/functions/_nextcloud_l10n.getCanonicalLocale.html
@@ -26,7 +26,7 @@ E.g. <code>en-US</code> instead of <code>en_US</code></p>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/nextcloud/nextcloud-l10n/blob/96e94b1/lib/translation.ts#L32">translation.ts:32</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/nextcloud/nextcloud-l10n/blob/965b02a/lib/locale.ts#L12">locale.ts:12</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -59,6 +59,7 @@ E.g. <code>en-US</code> instead of <code>en_US</code></p>
 <li><a href="_nextcloud_l10n.getMonthNames.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Month<wbr/>Names</span></a></li>
 <li><a href="_nextcloud_l10n.getMonthNamesShort.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Month<wbr/>Names<wbr/>Short</span></a></li>
 <li><a href="_nextcloud_l10n.getPlural.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Plural</span></a></li>
+<li><a href="_nextcloud_l10n.isRTL.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>isRTL</span></a></li>
 <li><a href="_nextcloud_l10n.loadTranslations.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>load<wbr/>Translations</span></a></li>
 <li><a href="_nextcloud_l10n.register.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>register</span></a></li>
 <li><a href="_nextcloud_l10n.translate.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>translate</span></a></li>
