--- a/functions/_nextcloud_l10n.unregister.html
+++ b/functions/_nextcloud_l10n.unregister.html
@@ -35,7 +35,7 @@
 <h4>Since</h4><p>2.1.0</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/nextcloud/nextcloud-l10n/blob/96e94b1/lib/translation.ts#L203">translation.ts:203</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/nextcloud/nextcloud-l10n/blob/965b02a/lib/translation.ts#L182">translation.ts:182</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -68,6 +68,7 @@
 <li><a href="_nextcloud_l10n.getMonthNames.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Month<wbr/>Names</span></a></li>
 <li><a href="_nextcloud_l10n.getMonthNamesShort.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Month<wbr/>Names<wbr/>Short</span></a></li>
 <li><a href="_nextcloud_l10n.getPlural.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Plural</span></a></li>
+<li><a href="_nextcloud_l10n.isRTL.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>isRTL</span></a></li>
 <li><a href="_nextcloud_l10n.loadTranslations.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>load<wbr/>Translations</span></a></li>
 <li><a href="_nextcloud_l10n.register.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>register</span></a></li>
 <li><a href="_nextcloud_l10n.translate.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>translate</span></a></li>
