--- a/modules/_nextcloud_l10n.html
+++ b/modules/_nextcloud_l10n.html
@@ -23,7 +23,7 @@
 </code><button>Copy</button></pre>
 </div></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/nextcloud/nextcloud-l10n/blob/96e94b1/lib/index.ts#L1">index.ts:1</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/nextcloud/nextcloud-l10n/blob/965b02a/lib/index.ts#L1">index.ts:1</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <h3 class="tsd-index-heading uppercase">Index</h3>
@@ -43,6 +43,7 @@
 <a href="../functions/_nextcloud_l10n.getMonthNames.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Month<wbr/>Names</span></a>
 <a href="../functions/_nextcloud_l10n.getMonthNamesShort.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Month<wbr/>Names<wbr/>Short</span></a>
 <a href="../functions/_nextcloud_l10n.getPlural.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Plural</span></a>
+<a href="../functions/_nextcloud_l10n.isRTL.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>isRTL</span></a>
 <a href="../functions/_nextcloud_l10n.loadTranslations.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>load<wbr/>Translations</span></a>
 <a href="../functions/_nextcloud_l10n.register.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>register</span></a>
 <a href="../functions/_nextcloud_l10n.translate.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>translate</span></a>
@@ -81,6 +82,7 @@
 <li><a href="../functions/_nextcloud_l10n.getMonthNames.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Month<wbr/>Names</span></a></li>
 <li><a href="../functions/_nextcloud_l10n.getMonthNamesShort.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Month<wbr/>Names<wbr/>Short</span></a></li>
 <li><a href="../functions/_nextcloud_l10n.getPlural.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>get<wbr/>Plural</span></a></li>
+<li><a href="../functions/_nextcloud_l10n.isRTL.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>isRTL</span></a></li>
 <li><a href="../functions/_nextcloud_l10n.loadTranslations.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>load<wbr/>Translations</span></a></li>
 <li><a href="../functions/_nextcloud_l10n.register.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>register</span></a></li>
 <li><a href="../functions/_nextcloud_l10n.translate.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>translate</span></a></li>
